update and add test Junit